--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 			<div id="about_app">This application is a final project of the Geo-web app building with open-source GIS tools </div>
 			<p class="ns">Faculty of Geo-Information Science and Earth Observation ITC of the University of Twente, Netherlands. (2021)
             </p>
-			<p class="ns">At this time it is useful to look at the cartographic symbology used. The query functions do not work since the Postgres database is not enabled.
+			<p class="ns">At this time, it is useful to analyze at the cartographic symbology used. The query functions do not work since the Postgres database is not enabled.
             </p>
 		</div>
 		
