--- a/index.html
+++ b/index.html
@@ -139,11 +139,14 @@
 					<span aria-hidden="true">&times;</span>
 				</button>
 			</h1>
+			
 			<div id="about_app">This application is a final project of the Geo-web app building with open-source GIS tools </div>
+			
 			<p class="ns">Faculty of Geo-Information Science and Earth Observation ITC of the University of Twente, Netherlands. (2021)
             </p>
 			<p class="ns">At this time, it is useful to analyze at the cartographic symbology used. The query functions do not work since the Postgres database is not enabled.
             </p>
+			
 		</div>
 		
 		<div id="contact" style="display:none;" class="bg-dark">
@@ -154,7 +157,7 @@
 			</h1>
 			<div id="contact_app">If you have any observations or comments about this application, please write to:</div>
 			<p class="ns">Jose Luis Herrera Escorcia</p>
-			<p class="ns">email:   j.l.herreraescorcia@student.utwente.nl</p>
+			<p class="ns">email:   j.l.herreraescorcia@student.utwente.nl or jherrera@udistrital.edu.co</p>
 		</div>
 		
 		
